# lwr_peg_in_hole

./: CMakeLists.txt  package.xml  setup.py
action/: HoleVisualServoing.action  ObjectSpawn.action  RobotMove.action  Screwdriver.action
holes/: holes_board.yaml  perfect_ellipse.yaml  plaque1.stl.yaml  plaque1.yaml  plaque2.yaml
include/lwr_peg_in_hole/: ellipse_detection.hpp  estimate_holes_service.hpp  find_hole_pose_service.hpp  hole_visual_servoing.hpp  object_spawn.hpp  peg_in_hole.hpp  robot_move.hpp  spawn_holes.hpp  update_scene_service.hpp
launch/: demo_services_servers.launch  ellipse_detection.launch  find_objects_w_tags.launch  kuka_cam.launch  kuka_cam2.launch  prosilica_launch.launch  screwdriver.launch  screwdriver.urdf  screwdriver.yaml  spawn_holes.launch
meshes/: holes_board.stl  holes_board_tag.dae  plaque1.stl  plaque2.stl
src/: cart_path.cpp  demo0.cpp  demo1.cpp  demo_a_plat.cpp  demo_lin.cpp  ellipse_detection.cpp  estimate_holes_service.cpp  find_hole_pose_service.cpp  hole_visual_servoing.cpp  hole_visual_servoing_action_server.cpp  hole_visual_servoing_node.cpp  object_spawn.cpp  object_spawn_action_server.cpp  peg_in_hole.cpp  peg_in_hole_node.cpp  real_demo_test0.cpp  real_demo_visual_servo_2d.cpp  robot_move.cpp  robot_move_action_server.cpp  robot_move_node.cpp  screwdriver_action_server.cpp  spawn_holes.cpp  update_scene_service.cpp
src/lwr_peg_in_hole/: .spyderworkspace  demo1_script.py
srv/: EstimateHolesService.srv  FindHolePoseService.srv  UpdateSceneService.srv
